<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:background="@color/colorPrimary"
                                             android:layout_height="match_parent">


    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent">


        <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal" android:id="@+id/rdGpGJ">

            <RadioButton
                    android:id="@+id/rdGyoyang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="20sp"
                    android:text="@string/activity_enroll_rd_gyoyang"/>

            <RadioButton
                    android:id="@+id/rdJeongong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/activity_enroll_rd_jeongong"/>

        </RadioGroup>


        <LinearLayout
                android:id="@+id/lGyoyangFilter"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:text="@string/activity_enroll_subject_name"
                      android:textColor="@color/colorDarkTextColor"
                      android:textSize="20sp"/>

            <EditText android:id="@+id/txtGyoyangSubjectName"
                      android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_weight="1" android:inputType="text"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/lJeongongFilter"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">


                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="3"
                          android:text="@string/activity_enroll_dept"
                          android:textColor="@color/colorDarkTextColor"
                          android:textSize="20sp"
                />

                <Spinner android:id="@+id/spnJeongongDept"
                          android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginBottom="6dp">


                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="3"
                          android:text="@string/activity_enroll_sub_dept"
                          android:textColor="@color/colorDarkTextColor"
                          android:textSize="20sp"
                />

                <Spinner android:id="@+id/spnJeongongSubDept"
                         android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginBottom="6dp">


                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="3"
                          android:text="@string/activity_enroll_subject_name"
                          android:textColor="@color/colorDarkTextColor"
                          android:textSize="20sp"
                />

                <EditText android:id="@+id/txtJeongongSubjectName"
                          android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="1" android:inputType="text"/>


            </LinearLayout>
        </LinearLayout>

        <CheckBox
                android:text="@string/activity_enroll_chk_only_vacant_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/chkOnlyVacantSubject"
                android:padding="6dp"
                android:layout_marginStart="8dp"/>

        <LinearLayout
                android:id="@+id/lGyoyangPartition"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/activity_enroll_chk_include_gs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/chkIncludeGs"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:layout_marginStart="8dp"/>

            <CheckBox
                    android:text="@string/activity_enroll_chk_include_gp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/chkIncludeGp"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:layout_marginStart="8dp"/>

            <CheckBox
                    android:text="@string/activity_enroll_chk_include_ro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/chkIncludeRo"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:layout_marginStart="8dp"/>

            <CheckBox
                    android:text="@string/activity_enroll_chk_include_gz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/chkIncludeGz"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/lJeongongPartition"
                      android:orientation="horizontal"
                      android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:visibility="gone"
                      android:layout_marginStart="8dp">
            <CheckBox
                    android:text="@string/activity_enroll_chk_exclude_consult_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/chkExcludeConsultSubject"
                    android:padding="6dp"
                    android:layout_marginStart="8dp"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/lGsPartition"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <CheckBox
                        android:text="@string/activity_enroll_chk_exclude_experiment_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/chkExcludeExperimentSubject"
                        android:padding="6dp"
                        android:layout_marginStart="8dp"/>

                <CheckBox
                        android:text="@string/activity_enroll_chk_exclude_engineering_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/chkExcludeEngineeringSubject"
                        android:padding="6dp"
                        android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <CheckBox
                        android:text="@string/activity_enroll_chk_exclude_volunteer_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/chkExcludeVolunteerSubject"
                        android:padding="6dp"
                        android:layout_marginStart="8dp"/>

                <CheckBox
                        android:text="@string/activity_enroll_chk_exclude_f_language_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/chkExcludeFLanguageSubject"
                        android:padding="6dp"
                        android:layout_marginStart="8dp"/>


            </LinearLayout>

        </LinearLayout>


        <Button android:id="@+id/btnFilterHideShow"
                android:layout_width="match_parent" android:layout_height="35dp"
                android:background="@color/colorPrimaryMiddle"
                android:textSize="20sp"
                android:text="@string/activity_enroll_btn_filter_hide"/>
        <Button android:layout_width="match_parent" android:layout_height="55dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/activity_enroll_btn_search"
                android:textColor="#ffffff"
                android:textSize="30sp" android:id="@+id/btnSearch"/>


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <android.support.v7.widget.RecyclerView
                    android:id="@+id/listResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:id="@+id/lblDescription"
                    android:text="@string/activity_enroll_lbl_description"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>


    <View android:id="@+id/opaWindow"
          android:layout_width="match_parent" android:layout_height="match_parent"
          android:alpha="0.4"
          android:visibility="gone"
          android:background="@color/colorDarkTextColor"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar android:id="@+id/pgBar"
                 android:layout_width="100dp" android:layout_height="100dp"
                 android:indeterminateDrawable="@drawable/round_progress_bar_dark_text_color"
                 android:visibility="visible"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>