<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="8dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/linearLayout">

        <TextView android:id="@+id/subjectName"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginBottom="8dp"
                  android:text="@string/element_watching_subject_lbl_subject_name"
                  android:textSize="30sp"
                  android:textColor="#000000"
                  android:textStyle="bold"/>

        <TextView android:id="@+id/subjectNoDiv"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginBottom="4dp"
                  android:text="@string/element_watching_subject_lbl_subject_no_div"
                  android:textSize="18sp"
                  android:textColor="#000000"/>


    </LinearLayout>
    <Button
            android:id="@+id/btnDelete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:alpha="0.8"
            android:background="@drawable/btn_round_solid_style_light_text"
            android:text="@string/element_watching_subject_btn_delete"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp" android:id="@+id/view"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>