<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/colorPrimary"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="#88ADD6"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/activity_join_lbl_desc_1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

    <EditText
            android:id="@+id/txtAuthCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|number"
            android:textColor="@color/colorDarkTextColor"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/desc" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:id="@+id/lNoAuthCode"
            android:layout_width="match_parent" android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAuthCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/activity_join_lbl_no_auth_code"
                  android:textSize="20sp"
                  android:layout_weight="1"
                  android:textColor="@color/colorDarkTextColor"
                  android:layout_gravity="center_vertical"
                  android:textAlignment="center"
        />

        <Button android:id="@+id/btnResend"
                android:layout_width="wrap_content" android:layout_height="35dp"
                android:background="@color/colorPrimaryDark"
                android:padding="4dp"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_join_btn_resend"
                android:textSize="20sp"
                android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/lButtons"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/lNoAuthCode"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent">

        <Button android:id="@+id/btnCancel"
                android:layout_width="0dp" android:layout_height="60dp"
                android:background="@color/colorLightTextColor"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:text="@string/activity_join_btn_cancel"
        />

        <Button android:id="@+id/btnConfirm"
                android:layout_width="0dp" android:layout_height="60dp"
                android:background="@color/colorPrimaryDark"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:text="@string/activity_join_btn_confirm"

        />

    </LinearLayout>

    <View android:id="@+id/opaWindow"
          android:layout_width="match_parent" android:layout_height="match_parent"
          android:alpha="0.4"
          android:background="@color/colorDarkTextColor"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintVertical_bias="0.0" android:visibility="gone"/>

    <ProgressBar android:id="@+id/pgBar"
                 android:layout_width="100dp" android:layout_height="100dp"
                 android:indeterminateDrawable="@drawable/round_progress_bar_dark_text_color"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>